--- a/org1peer0.short.yaml
+++ b/org1peer0.short.yaml
@@ -5,9 +5,12 @@ pod:
   - name: org1peer0
     image: 693838464287.dkr.ecr.us-east-1.amazonaws.com/test-bundle-org1peer0
     env:
+    - CORE_VM_ENDPOINT=unix:///var/run/docker.sock
+    - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=blubnet
+    # asdf
     - CORE_PEER_ID=peer0.org1.example.com
-    - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
-    - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.example.com:7051
+    - CORE_PEER_ADDRESS=localhost:7051
+    - CORE_PEER_GOSSIP_EXTERNALENDPOINT=localhost:7051
     - CORE_PEER_LOCALMSPID=Org1MSP
     # defaults
     - CORE_LOGGING_LEVEL=DEBUG
@@ -27,3 +30,4 @@ pod:
     - 7051
     - 7053
   termination_grace_period: 10
+  restart_policy: never
