configure orderer using kubernetes resources

--- a/orderer.kube.yaml
+++ b/orderer.kube.yaml
@@ -34,7 +34,60 @@ spec:
     - containerPort: 7050
       protocol: TCP
     resources: {}
+    volumeMounts:
+    - mountPath: /var/hyperledger/orderer
+      mountPropagation: ""
+      name: crypto-config
     workingDir: /opt/gopath/src/github.com/hyperledger/fabric
   restartPolicy: Never
   terminationGracePeriodSeconds: 10
+  volumes:
+  - name: crypto-config
+    projected:
+      sources:
+      - configMap:
+          items:
+          - key: cert
+            path: msp/admincerts/Admin@example.com-cert.pem
+          name: admin-example-com-cert
+      - configMap:
+          items:
+          - key: cert
+            path: msp/cacerts/ca.example.com-cert.pem
+          name: ca-example-com-cert
+      - secret:
+          items:
+          - key: sk
+            path: msp/keystore/orderer_sk
+          name: orderer-example-com-sk
+      - configMap:
+          items:
+          - key: cert
+            path: msp/signcerts/orderer.example.com-cert.pem
+          name: orderer-example-com-cert
+      - configMap:
+          items:
+          - key: cert
+            path: msp/tlscacerts/tlsca.example.com-cert.pem
+          name: tlsca-example-com-cert
+      - configMap:
+          items:
+          - key: cert
+            path: tls/ca.crt
+          name: tlsca-example-com-cert
+      - configMap:
+          items:
+          - key: cert
+            path: tls/server.crt
+          name: orderer-example-com-tls-cert
+      - secret:
+          items:
+          - key: sk
+            path: tls/server.key
+          name: orderer-example-com-tls-sk
+      - secret:
+          items:
+          - key: block
+            path: orderer.genesis.block
+          name: orderer-example-com-genesis-block
 
