--- a/orderer.short.yaml
+++ b/orderer.short.yaml
@@ -21,5 +21,40 @@ pod:
     - orderer
     expose:
     - 7050
+    volume:
+    - mount: /var/hyperledger/orderer
+      store: crypto-config
   termination_grace_period: 10
   restart_policy: never
+  volumes:
+    crypto-config:
+      vol_type: projected
+      sources:
+      - config: admin-example-com-cert
+        items:
+          msp/admincerts/Admin@example.com-cert.pem: cert
+      - config: ca-example-com-cert
+        items:
+          msp/cacerts/ca.example.com-cert.pem: cert
+      - secret: orderer-example-com-sk
+        items:
+          msp/keystore/orderer_sk: sk
+      - config: orderer-example-com-cert
+        items:
+          msp/signcerts/orderer.example.com-cert.pem: cert
+      - config: tlsca-example-com-cert
+        items:
+          msp/tlscacerts/tlsca.example.com-cert.pem: cert
+      - config: tlsca-example-com-cert
+        items:
+          tls/ca.crt: cert
+      - config: orderer-example-com-tls-cert
+        items:
+          tls/server.crt: cert
+      - secret: orderer-example-com-tls-sk
+        items:
+          tls/server.key: sk
+      - secret: orderer-example-com-genesis-block
+        items:
+          orderer.genesis.block: block
+
