wip client tools to connect fabric network

--- a/Dockerfile.org1peer0
+++ b/Dockerfile.org1peer0
@@ -2,12 +2,15 @@ FROM hyperledger/fabric-baseos:x86_64-0.4.5
 ENV FABRIC_CFG_PATH /etc/hyperledger/fabric
 RUN mkdir -p /var/hyperledger/production $FABRIC_CFG_PATH
 
+RUN apt-get update && apt-get install dnsutils curl
+COPY tools/cryptogen /usr/local/bin
+COPY tools/configtxgen /usr/local/bin
+COPY tools/configtxlator /usr/local/bin
+COPY channel-artifacts /workspace
+COPY config /workspace
+COPY crypto-config /workspace
+
 COPY peer/peer /usr/local/bin
-#COPY peer/sampleconfig $FABRIC_CFG_PATH/
-#RUN rm -rf $FABRIC_CFG_PATH/msp
-#COPY crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp $FABRIC_CFG_PATH/msp
-#RUN rm -rf $FABRIC_CFG_PATH/tls
-#COPY crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls $FABRIC_CFG_PATH/tls
 
 CMD ["peer","node","start"]
 LABEL org.hyperledger.fabric.version=1.1.0-beta-snapshot-15bda58 \
