--- a/orderer.kube.yaml
+++ b/orderer.kube.yaml
@@ -1,109 +1,133 @@
 apiVersion: v1
-kind: Pod
+kind: Service
 metadata:
   name: orderer
   namespace: hltest
 spec:
-  containers:
-  - command:
-    - orderer
-    env:
-    - name: ORDERER_GENERAL_LOGLEVEL
-      value: debug
-    - name: ORDERER_GENERAL_LISTENADDRESS
-      value: 0.0.0.0
-    - name: ORDERER_GENERAL_GENESISMETHOD
-      value: file
-    - name: ORDERER_GENERAL_GENESISFILE
-      value: /var/hyperledger/orderer/orderer.genesis.block
-    - name: ORDERER_GENERAL_LOCALMSPID
-      value: OrdererMSP
-    - name: ORDERER_GENERAL_LOCALMSPDIR
-      value: /var/hyperledger/orderer/msp
-    - name: ORDERER_GENERAL_TLS_ENABLED
-      value: "true"
-    - name: ORDERER_GENERAL_TLS_PRIVATEKEY
-      value: /var/hyperledger/orderer/tls/server.key
-    - name: ORDERER_GENERAL_TLS_CERTIFICATE
-      value: /var/hyperledger/orderer/tls/server.crt
-    - name: ORDERER_GENERAL_TLS_ROOTCAS
-      value: '[/var/hyperledger/orderer/tls/ca.crt]'
-    image: 693838464287.dkr.ecr.us-east-1.amazonaws.com/test-bundle-orderer
-    name: orderer
-    ports:
-    - containerPort: 7050
-      protocol: TCP
-    resources: {}
-    volumeMounts:
-    - mountPath: /var/hyperledger/orderer
-      mountPropagation: ""
-      name: files
-    - mountPath: /etc/hyperledger/fabric
-      mountPropagation: ""
-      name: config
-    workingDir: /opt/gopath/src/github.com/hyperledger/fabric
-  restartPolicy: Never
-  terminationGracePeriodSeconds: 10
-  volumes:
-  - name: config
-    projected:
-      sources:
-      - configMap:
-          items:
-          - key: config
-            path: core.yaml
-          name: core-config
-      - configMap:
-          items:
-          - key: config
-            path: orderer.yaml
-          name: orderer-example-com-config
-  - name: files
-    projected:
-      sources:
-      - configMap:
-          items:
-          - key: cert
-            path: msp/admincerts/Admin@example.com-cert.pem
-          name: admin-example-com-cert
-      - configMap:
-          items:
-          - key: cert
-            path: msp/cacerts/ca.example.com-cert.pem
-          name: ca-example-com-cert
-      - secret:
-          items:
-          - key: sk
-            path: msp/keystore/orderer_sk
-          name: orderer-example-com-sk
-      - configMap:
-          items:
-          - key: cert
-            path: msp/signcerts/orderer.example.com-cert.pem
-          name: orderer-example-com-cert
-      - configMap:
-          items:
-          - key: cert
-            path: msp/tlscacerts/tlsca.example.com-cert.pem
-          name: tlsca-example-com-cert
-      - configMap:
-          items:
-          - key: cert
-            path: tls/ca.crt
-          name: tlsca-example-com-cert
-      - configMap:
-          items:
-          - key: cert
-            path: tls/server.crt
-          name: orderer-example-com-tls-cert
-      - secret:
-          items:
-          - key: sk
-            path: tls/server.key
-          name: orderer-example-com-tls-sk
-      - secret:
-          items:
-          - key: block
-            path: orderer.genesis.block
-          name: orderer-example-com-genesis-block
+  ports:
+  - name: "7050"
+    port: 7050
+    protocol: TCP
+  selector:
+    app: orderer
+  type: ClusterIP
+---
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: orderer
+  namespace: hltest
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: orderer
+  strategy:
+    type: RollingUpdate
+  template:
+    metadata:
+      labels:
+        app: orderer
+    spec:
+      containers:
+      - command:
+        - orderer
+        env:
+        - name: ORDERER_GENERAL_LOGLEVEL
+          value: debug
+        - name: ORDERER_GENERAL_LISTENADDRESS
+          value: 0.0.0.0
+        - name: ORDERER_GENERAL_GENESISMETHOD
+          value: file
+        - name: ORDERER_GENERAL_GENESISFILE
+          value: /var/hyperledger/orderer/orderer.genesis.block
+        - name: ORDERER_GENERAL_LOCALMSPID
+          value: OrdererMSP
+        - name: ORDERER_GENERAL_LOCALMSPDIR
+          value: /var/hyperledger/orderer/msp
+        - name: ORDERER_GENERAL_TLS_ENABLED
+          value: "true"
+        - name: ORDERER_GENERAL_TLS_PRIVATEKEY
+          value: /var/hyperledger/orderer/tls/server.key
+        - name: ORDERER_GENERAL_TLS_CERTIFICATE
+          value: /var/hyperledger/orderer/tls/server.crt
+        - name: ORDERER_GENERAL_TLS_ROOTCAS
+          value: '[/var/hyperledger/orderer/tls/ca.crt]'
+        image: 693838464287.dkr.ecr.us-east-1.amazonaws.com/test-bundle-orderer
+        name: orderer
+        ports:
+        - containerPort: 7050
+          protocol: TCP
+        volumeMounts:
+        - mountPath: /var/hyperledger/orderer
+          mountPropagation: ""
+          name: files
+        - mountPath: /etc/hyperledger/fabric
+          mountPropagation: ""
+          name: config
+        workingDir: /opt/gopath/src/github.com/hyperledger/fabric
+      restartPolicy: Always
+      terminationGracePeriodSeconds: 10
+      volumes:
+      - name: config
+        projected:
+          sources:
+          - configMap:
+              items:
+              - key: config
+                path: core.yaml
+              name: core-config
+          - configMap:
+              items:
+              - key: config
+                path: orderer.yaml
+              name: orderer-example-com-config
+      - name: files
+        projected:
+          sources:
+          - configMap:
+              items:
+              - key: cert
+                path: msp/admincerts/Admin@example.com-cert.pem
+              name: admin-example-com-cert
+          - configMap:
+              items:
+              - key: cert
+                path: msp/cacerts/ca.example.com-cert.pem
+              name: ca-example-com-cert
+          - secret:
+              items:
+              - key: sk
+                path: msp/keystore/orderer_sk
+              name: orderer-example-com-sk
+          - configMap:
+              items:
+              - key: cert
+                path: msp/signcerts/orderer.example.com-cert.pem
+              name: orderer-example-com-cert
+          - configMap:
+              items:
+              - key: cert
+                path: msp/tlscacerts/tlsca.example.com-cert.pem
+              name: tlsca-example-com-cert
+          - configMap:
+              items:
+              - key: cert
+                path: tls/ca.crt
+              name: tlsca-example-com-cert
+          - configMap:
+              items:
+              - key: cert
+                path: tls/server.crt
+              name: orderer-example-com-tls-cert
+          - secret:
+              items:
+              - key: sk
+                path: tls/server.key
+              name: orderer-example-com-tls-sk
+          - secret:
+              items:
+              - key: block
+                path: orderer.genesis.block
+              name: orderer-example-com-genesis-block
 
