--- a/config/orderer.yaml
+++ b/config/orderer.yaml
@@ -38,16 +38,16 @@ General:
         ClientRootCAs:
 
     # Keepalive settings for the GRPC server.
-    Keepalive:
+    #Keepalive:
         # ServerMinInterval is the minimum permitted time between client pings.
         # If clients send pings more frequently, the server will
         # disconnect them.
-        ServerMinInterval: 60s
+        #ServerMinInterval: 60s
         # ServerInterval is the time between pings to clients.
-        ServerInterval: 7200s
+        #ServerInterval: 7200s
         # ServerTimeout is the duration the server waits for a response from
         # a client before closing the connection.
-        ServerTimeout: 20s
+        #ServerTimeout: 20s
 
     # Log Level: The level at which to log. This accepts logging specifications
     # per: fabric/docs/Setup/logging-control.md
@@ -117,10 +117,10 @@ General:
 
     # Authentication contains configuration parameters related to authenticating
     # client messages
-    Authentication:
+    #Authentication:
         # the acceptable difference between the current server time and the
         # client's time as specified in a client request message
-        TimeWindow: 15m
+        #TimeWindow: 15m
 
 ################################################################################
 #
@@ -255,12 +255,12 @@ Kafka:
 #   - This controls the debugging options for the orderer
 #
 ################################################################################
-Debug:
+#Debug:
 
     # BroadcastTraceDir when set will cause each request to the Broadcast service
     # for this orderer to be written to a file in this directory
-    BroadcastTraceDir:
+    #BroadcastTraceDir:
 
     # DeliverTraceDir when set will cause each request to the Deliver service
     # for this orderer to be written to a file in this directory
-    DeliverTraceDir:
+    #DeliverTraceDir:
