--- a/org1peer0.short.yaml
+++ b/org1peer0.short.yaml
@@ -28,8 +28,8 @@ deployment:
     - CORE_PEER_LOCALMSPID=Org1MSP
     # defaults
     - CORE_LOGGING_LEVEL=DEBUG
-    - CORE_PEER_TLS_ENABLED=true
-    - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:7052
+    - CORE_PEER_TLS_ENABLED=false
+    #- CORE_PEER_CHAINCODELISTENADDRESS=peer0:7052
     - CORE_PEER_GOSSIP_USELEADERELECTION=true
     - CORE_PEER_GOSSIP_ORGLEADER=false
     - CORE_PEER_PROFILE_ENABLED=true
