--- a/org1peer0.short.yaml
+++ b/org1peer0.short.yaml
@@ -19,7 +19,7 @@ deployment:
   - name: org1peer0
     image: 693838464287.dkr.ecr.us-east-1.amazonaws.com/test-bundle-org1peer0
     env:
-    - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+    - CORE_VM_ENDPOINT=http://localhost:2375
     #- CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=blubnet
     # asdf
     - CORE_PEER_ID=peer0
@@ -44,10 +44,14 @@ deployment:
     expose:
     - 7051
     - 7053
+  - name: dind
+    image: docker:dind
+    privileged: true
     volume:
-    - mount: /host/var/run/docker.sock
-      store: docker
+    - mount: /var/lib/docker
+      store: docker-graph-storage
   termination_grace_period: 10
   restart_policy: always
   volumes:
-    docker: host_path:/var/run/docker.sock:socket
+    docker-graph-storage:
+      vol_type: empty_dir
