--- a/orderer.short.yaml
+++ b/orderer.short.yaml
@@ -14,12 +14,12 @@ deployment:
     app: orderer-example-com
   containers:
   - name: orderer
-    image: 693838464287.dkr.ecr.us-east-1.amazonaws.com/test-bundle-orderer
+    image: hyperledger/fabric-orderer:x86_64-1.1.0-alpha
     env:
     - ORDERER_GENERAL_LOGLEVEL=debug
     - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
     - ORDERER_GENERAL_GENESISMETHOD=file
-    - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/orderer/orderer.genesis.block
+    - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/orderer/genesis/orderer.genesis.block
     - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
     - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/orderer/msp
     # enabled TLS
@@ -32,6 +32,57 @@ deployment:
     - orderer
     expose:
     - 7050
+    volume:
+    - mount: /var/hyperledger/orderer
+      store: files
+    - mount: /var/hyperledger/orderer/genesis
+      store: genesis
+    - mount: /etc/hyperledger/fabric
+      store: config
+  init_containers:
+  - name: tar
+    image: ubuntu:16.04
+    command:
+    - sh
+    - -c
+    - |
+      set -e
+      set -x
+      cd /target
+      tar -xvf /msp-source/msp.tar.gz
+      tar -xvf /tls-source/tls.tar.gz
+    volume:
+    - mount: /target
+      store: files
+    - mount: /msp-source
+      store: msp-config
+    - mount: /tls-source
+      store: tls-config
   termination_grace_period: 10
   restart_policy: always
-
+  volumes:
+    files: empty_dir
+    msp-config:
+      items:
+        msp.tar.gz: bundle
+      vol_id: orderer-example-com-msp
+      vol_type: secret
+    tls-config:
+      items:
+        tls.tar.gz: bundle
+      vol_id: orderer-example-com-tls
+      vol_type: secret
+    genesis:
+      items:
+        orderer.genesis.block: file
+      vol_id: orderer-genesis-block
+      vol_type: secret
+    config:
+      vol_type: projected
+      sources:
+      - config: core-yaml
+        items:
+          core.yaml: file
+      - config: orderer-yaml
+        items:
+          orderer.yaml: file
