--- a/peer.deployment.short.yaml
+++ b/peer.deployment.short.yaml
@@ -1,38 +1,31 @@
-service:
-  namespace: hltest
-  name: peer0
-  selector:
-    app: org1peer0
-  ports:
-  - 7050: 7050
-  - 7051: 7051
-  - 7052: 7052
-  - 7053: 7053
----
+params:
+- namespace: k8s namespace
+- config: configuration for the peer
+  default:
+    name: peer0
+    org: org1
+    service_name: peer0-org1
 deployment:
-  namespace: hltest
-  name: org1peer0
+  namespace: ${namespace}
+  name: ${config.service_name}
   replicas: 1
   selector:
-    app: org1peer0
+    app: ${config.service_name}
   containers:
-  - name: org1peer0
+  - name: peer
     image: hyperledger/fabric-peer:x86_64-1.0.5
     env:
-    - CORE_VM_ENDPOINT=http://localhost:2375
-    #- CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=blubnet
-    # asdf
-    - CORE_PEER_ID=peer0
-    - CORE_PEER_ADDRESS=peer0:7051
-    #- CORE_PEER_GOSSIP_EXTERNALENDPOINT=localhost:7051
-    - CORE_PEER_LOCALMSPID=Org1MSP
-    # defaults
     - CORE_LOGGING_LEVEL=DEBUG
-    - CORE_PEER_TLS_ENABLED=false
+    - CORE_VM_ENDPOINT=http://localhost:2375
+    - CORE_PEER_ADDRESS=${config.service_name}:7051
+    - CORE_PEER_GOSSIP_EXTERNALENDPOINT=localhost:7051
     - CORE_PEER_CHAINCODELISTENADDRESS=localhost:7052
+    - CORE_PEER_ID=${config.service_name}
+    - CORE_PEER_LOCALMSPID=Org1MSP
     - CORE_PEER_GOSSIP_USELEADERELECTION=true
     - CORE_PEER_GOSSIP_ORGLEADER=false
     - CORE_PEER_PROFILE_ENABLED=true
+    - CORE_PEER_TLS_ENABLED=false
     - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
     - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
     - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
@@ -46,11 +39,7 @@ deployment:
     - 7053
     volume:
     - mount: /etc/hyperledger/fabric
-      store: config
-    - mount: /etc/hyperledger/fabric/msp
-      store: msp-target
-    - mount: /etc/hyperledger/fabric/tls
-      store: tls-target
+      store: files-target
   - name: dind
     image: docker:dind
     privileged: true
@@ -67,13 +56,14 @@ deployment:
       set -e
       set -x
       cd /target
+      cp -Lr /config-source/* .
       tar -xvf /msp-source/msp.tar.gz
       tar -xvf /tls-source/tls.tar.gz
     volume:
-    - mount: /target/msp
-      store: msp-target
-    - mount: /target/tls
-      store: tls-target
+    - mount: /target
+      store: files-target
+    - mount: /config-source
+      store: config
     - mount: /msp-source
       store: msp-config
     - mount: /tls-source
@@ -82,17 +72,16 @@ deployment:
   restart_policy: always
   volumes:
     docker-graph-storage: empty_dir
-    msp-target: empty_dir
-    tls-target: empty_dir
+    files-target: empty_dir
     msp-config:
       items:
         msp.tar.gz: bundle
-      vol_id: peer0-org1-msp
+      vol_id: ${config.service_name}-msp
       vol_type: secret
     tls-config:
       items:
         tls.tar.gz: bundle
-      vol_id: peer0-org1-tls
+      vol_id: ${config.service_name}-tls
       vol_type: secret
     config:
       items:
